--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,15 +3,15 @@ jobs:
   build:
     docker:
       - image: circleci/ruby:2.4.1-node-browsers
-   
+      
     steps:
       - checkout
       
       - run:
           name: Saludos
-          command: echo Hello, world
+          command: echo Hello, world.
       
-      - run: 
-          name: Imprime la fecha actual
-          command: date 
+      - run:
+          name: Imrprime la fecha actual
+          command: date
         
