--- a/.github/issue-close-app.yml
+++ b/.github/issue-close-app.yml
@@ -5,13 +5,12 @@ issueConfigs:
 - content:
 # Example 1: bug report
   - "Expected Behavior"
-  - "Current Behavior"
   - "Steps to Reproduce"
-  - "Detailed Description"
+  - "Describe the bug"
 - content:
 # Example 2: feature request
-  - "Motivation / Use Case"
+  - "Use Case"
   - "Expected Behavior"
-  - "Other Information"
+  - "Additional context"
 # The issue is judged to be legal if it includes all keywords from any of these two configs.
 # Or it will be closed by the app.
